首页样式修改

--- a/index/Tpl/default/public/header.html
+++ b/index/Tpl/default/public/header.html
@@ -2,17 +2,37 @@
 
 <div  id="ptop">
 	<div>
-		<span><{:showbar()}></span><a  href="book/index.php?charset=gbk">简体</a>|<a  href="http://www.cuiweiju.com/index.php?charset=big5">繁体</a>|<a  href="javascript:window.external.addFavorite('http://www.cuiweiju.com','翠微居小说网');">加入收藏</a>|<a href="javascript:;" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.lamp99.com');">设为首页</a>
+		<span><{:showbar()}></span>
+		<!-- <a  href="book/index.php?charset=gbk">简体</a>|
+		<a  href="http://www.cuiweiju.com/index.php?charset=big5">繁体</a>| -->
+		<a  href="javascript:window.external.addFavorite('http://www.cuiweiju.com','翠微居小说网');">加入收藏</a>|
+		<a href="javascript:;" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.lamp99.com');">设为首页</a>
 	</div>
 </div>
 
 <div id="phead" class="clearfix">
 	<h1><a href="__ROOT__"><img name="logo" src="__ROOT__/<{$Think.site_logo}>" width="222" height="53" alt="" /></a></h1>
+<!-- 	
 	<{:getAD(121,465,55)}>
     <ul><li><a href="#" target="_blank">新手必读手册</a></li>
         <li><a href="#" target="_blank"><font color=red>免费领取翠微币活动</font></a></li>
         <li><a href="#" target="_blank">举报低俗信息有奖</a></li>
-    </ul>
+	</ul> -->
+	<div class="header-search">
+		<form name="articlesearch" method="post" action="/book/index.php/search/index.html" target="_blank">
+			<div class="header-searchCon">
+				<select name="" class="search-sort">
+					<option  name="searchtype" value="articlename" checked="checked">书名</option>
+					<option  name="searchtype" value="author" >作者</option>
+				</select>
+				
+			<input name="searchkey" type="text" class="search_text"> 
+
+			<!-- <input type="radio" class="radio" name="searchtype" value="articlename" checked="checked" />书名 	
+			<input type="radio" class="radio" name="searchtype" value="author" />作者 -->
+			<input type="submit" class="search_submit" value="搜索"></div>
+		</form>
+	</div>
 </div>
 <div id="pmenu_bar">
 	<div id="mynav">
