--- a/index/Tpl/default/member/login.html
+++ b/index/Tpl/default/member/login.html
@@ -35,7 +35,7 @@
         <form name="frmlogin" method="post" action="__URL__/checklogin">
         <div>
        
-            <div class="clue"><p>没有账号？立即<a href="__MEMBER__/reg.html">免费注册</a>一个</p></div>
+            <div class="clue"><p>没有账号？立即<a href="__URL__/reg.html">免费注册</a>一个</p></div>
         </div>
         <table cellspacing="0" cellpadding="0">
             <tr>
