--- a/Admin/Tpl/default/book/cat_main.html
+++ b/Admin/Tpl/default/book/cat_main.html
@@ -77,7 +77,8 @@ height:18px
   <volist name='cats' id='cat'>
   <tr class="alt-row"><td width="25%"><input type="checkbox" /><a href="cat_edit?cid=<{$cat.cat_id}>" ><{$cat.cat_name}></a>(小说：<{$cat.total}>本)  <a href="cat_edit?cid=<{$cat.cat_id}>"><img src="__PUBLIC__/admin/images/write2.gif"></a></td><td width="17%" align="center"><if condition="$cat.status eq 1"> 显示
 <else /> 隐藏
-</if></td><td width="26%" align="right"><a href="http://localhost/dede/plus/list.php?tid=2" target="_blank">预览</a>|<a href="http://localhost/dede/dede/catalog_do.php?cid=2&amp;dopost=listArchives">内容</a>|<a href="__APP__/book/cat_edit?cid=<{$cat.cat_id}>">修改</a>|<a href="__APP__/book/cat_del?cid=<{$cat.cat_id}>" onclick="return confirm('确定要删除?')">删除</a></td>
+</if></td><td width="26%" align="right"><a href="http://localhost/dede/plus/list.php?tid=2" target="_blank">预览</a>|<a href="http://localhost/dede/dede/catalog_do.php?cid=2&amp;dopost=listArchives">内容</a>|
+	<a href="__APP__/book/cat_edit?cid=<{$cat.cat_id}>">修改</a>|<a href="__APP__/book/cat_del?cid=<{$cat.cat_id}>" onclick="return confirm('确定要删除?')">删除</a></td>
     <td width="32%" align="right"><input name="ordernum" value="<{$cat.ordernum}>" style="width:25px;height:20px" type="text"></td>
   </tr>
   </volist>
