--- a/index/Tpl/default/booksear/index.html
+++ b/index/Tpl/default/booksear/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>在线书库——听雨轩在线书城</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="小说;小说阅读网;好看的小说;娱乐;艳遇;情人;后宫;美人;TXT;泡妞;激情小说;成人小说;都市小说;玄幻小说;言情小说;免费小说;H小说;yy小说;乡村;山村;小说下载" />
-<meta name="description" content="翠微居小说网致力于打造成为最好看的小说阅读网，提供免费的都市小说、言情小说、玄幻小说、武侠小说、同人小说、仙侠小说、yy小说、激情小说、成人小说、乡村、山村、娱乐、艳遇、后宫、泡妞等的在线阅读，努力营造一个绿色的创作与阅读平台！同时提供免费txt小说下载，每日最快更新，页面简洁，访问速度快！" />
+<meta name="keywords" content="" />
+<meta name="description" content="" />
 <meta name="author" content="http://www.jieqi.com (jieqi cms)" />
 <meta name="copyright" content="Copyright (C) 2002-2013 cuiweiju.com All Rights Reserved 
 
@@ -45,6 +45,7 @@
 	  <td class="tdr">
 		<a href="__URL__/" class="hottext"><strong>全部</strong></a>&nbsp;
 		<foreach name="cat" item="vo">
+			
 			<a href="__URL__/index/type/cats/val/<{$vo.cat_id}>"><{$vo.cat_name}></a>&nbsp;&nbsp;
 		</foreach>
 	  </td>
