--- a/index/Tpl/default/public/header.html
+++ b/index/Tpl/default/public/header.html
@@ -1,16 +1,18 @@
 
 
-<div  id="ptop">
-	<div>
-		<span><{:showbar()}></span>
+<div  id="top">
+	<div class="wrap">
+		<p class="top-welcome">欢迎访问在线阅读！</p>
+		<div class="login-content"><{:showbar()}></div>
 		<!-- <a  href="book/index.php?charset=gbk">简体</a>|
-		<a  href="http://www.cuiweiju.com/index.php?charset=big5">繁体</a>| -->
+		<a  href="http://www.cuiweiju.com/index.php?charset=big5">繁体</a>| 
 		<a  href="javascript:window.external.addFavorite('http://www.cuiweiju.com','翠微居小说网');">加入收藏</a>|
-		<a href="javascript:;" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.lamp99.com');">设为首页</a>
+		<a href="javascript:;" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.lamp99.com');">设为首页</a>-->
 	</div>
 </div>
 
 <div id="phead" class="clearfix">
+	ROOT--------__ROOT__        //  URl   ---- __URL__     //APP---__APP__
 	<h1><a href="__ROOT__"><img name="logo" src="__ROOT__/<{$Think.site_logo}>" width="222" height="53" alt="" /></a></h1>
 <!-- 	
 	<{:getAD(121,465,55)}>
@@ -40,9 +42,11 @@
 	 </div>
 
 
-    <div class="type">
-   
-		 <{:showcats()}>
+    <div class="type-nav">
+		<div class="wrap">
+			<{:showcats()}>
+		</div>
+		 
     </div>
     <div class="dynamic">
 		<div class="m_quee" id="m_quee">
