--- a/index/Tpl/default/member/index.html
+++ b/index/Tpl/default/member/index.html
@@ -17,7 +17,7 @@
 <!---头部部分--->
 <include file="Public:header" />
 
-<div  class="main">
+<div  class="wrap clearfix">
 <!---左侧导航--->
 <include file="Public:memberleft" />
 
