--- a/index/Tpl/default/public/memberleft.html
+++ b/index/Tpl/default/public/memberleft.html
@@ -1,4 +1,4 @@
-<div  id="left">
+<!-- <div  id="left">
 
 <div  class="block">
 <div  class="blocktitle"><span>用户设置</span></div>
@@ -36,4 +36,34 @@
 </ul></div>
 </div>
   
+</div> -->
+
+<div class="user-centerLeft">
+    <div class="userCenter-sort">
+        <h2>用户设置</h2>
+        <div class="userCenter-det">
+            <a href="__APP__/member/index">个人首页</a>
+            <a href="__APP__/member/member_edit">修改资料</a>
+            <a href="__APP__/member/avatar_edit">修改头像</a>
+            <a href="__APP__/member/pwd_edit">修改密码</a>
+        </div>
+    </div>
+    <div class="userCenter-sort">
+        <h2>短消息</h2>
+        <div class="userCenter-det">
+            <a href="__APP__/letter/inbox">收件箱</a>
+            <a href="__APP__/letter/outbox">发件箱</a>
+            <a href="__APP__/letter/write">写消息</a>
+            <a href="__APP__/letter/toadmin">写给管理员</a>
+        </div>
+    </div>
+    <div class="userCenter-sort">
+        <h2>工具箱</h2>
+        <div class="userCenter-det">
+            <a href="http://www.cuiweiju.com/ptopics.php?uid=self">我的留言</a>
+            <a href="__APP__/member/order">订阅记录</a>
+            <a href="__APP__/member/pay">在线充值</a>
+            <a href="__APP__/member/applyauthor">申请作者</a>
+        </div>
+    </div>
 </div>
