admin后台  添加小说 添加章节 前端导航 点击标签到搜索页面

--- a/index/Tpl/default/public/header.html
+++ b/index/Tpl/default/public/header.html
@@ -21,7 +21,8 @@
         <li><a href="#" target="_blank">举报低俗信息有奖</a></li>
 	</ul> -->
 	<div class="header-search">
-		<form name="articlesearch" method="post" action="/book/index.php/search/index.html" target="_blank">
+		<form name="book" method="post" action="__URL__/index" target="_blank">
+			<!-- /book/index.php/search/index.html -->
 			<div class="header-searchCon">
 				<select name="" class="search-sort">
 					<option  name="searchtype" value="articlename" checked="checked">书名</option>
