--- a/index/Tpl/default/member/order.html
+++ b/index/Tpl/default/member/order.html
@@ -8,30 +8,20 @@
 <link rel="stylesheet" rev="stylesheet" href="__CSS__/main.css" type="text/css" media="all">
 <script language="javascript" type="text/javascript" src="__JS__/common.js"></script>
 <script language="javascript" type="text/javascript" src="__JS__/theme.js"></script>
-<!--[if IE 6]>
-<script type="text/javascript" src="/scripts/DD_belatedPNG.js" ></script>
-<script type="text/javascript">
-	DD_belatedPNG.fix(' .recommend_pic,.editor_pic,.title_pic,,#phead h1,#phead h1 ');
-</script>
-<![endif]-->
-
 </head>
 <body>
 
 <!---头部部分--->
 <include file="Public:header" />
 
-<!--------------------------------------------内容部分---------------------------------------------->
-
-
-
-
-
-<div class="main">
+<div class="wrap clearfix mb20">
 
 <!---左侧导航--->
 <include file="Public:memberleft" />
-  <div id="centerm"><div id="content">
+
+<div class="user-right">
+
+
 <table class="grid" align="center" width="100%">
 <caption>VIP章节订阅记录</caption>
   <tbody><tr align="center">
@@ -52,14 +42,10 @@
 <div class="pages">
 <{$page}>
 </div>
-
-</div>
-</div>
-
 </div>
 
 
-
+</div>
 
 <!--foot底部部分--->
 <include file="Public:footer" />
