--- a/index/Tpl/default/search/index.html
+++ b/index/Tpl/default/search/index.html
@@ -31,16 +31,11 @@
 <body>
 <!---头部部分--->
 <include file="Public:header" />
-
 <!--------------------------------------------内容部分---------------------------------------------->
-
 <div class="main">
-
-
-
 <table class="grid" width="100%" align="center">
 
-	<caption>关键字的搜索结果</caption>
+	<caption>搜索结果</caption>
 	<tr align="center">
 		<th width="15%">小说名称</th>
 		<th width="10%">小说类别</th>
@@ -51,7 +46,6 @@
 		<th width="10%">更新</th>
 		<th width="6%">状态</th>
 	</tr>
-	
 	<foreach name="book" item="vo">
 		<tr>
 			<td class="odd even">
@@ -81,7 +75,6 @@
 		</tr>
 	</foreach>
 </table>
-
 <div class="pages">
 	<div class="pagelink" id="pagelink">
 		<{$page}>
@@ -90,5 +83,4 @@
 <!--foot底部部分--->
 <include file="Public:footer" />
 </body>
-
 </html>
