添加 章节修改功能

--- a/Admin/Tpl/default/book/book_add.html
+++ b/Admin/Tpl/default/book/book_add.html
@@ -117,7 +117,7 @@
                                 </p>                                
 
 								<p>
-									<br><input class="button" name="submit" value="编辑" type="submit">
+									<br><input class="button" name="submit" value="确认添加" type="submit">
 								</p>
 								
 							</fieldset>
