--- a/Admin/Tpl/default/book/book_main.html
+++ b/Admin/Tpl/default/book/book_main.html
@@ -49,12 +49,9 @@
 				<h3 style="cursor: s-resize;">小说管理</h3>
 
 				<ul class="content-box-tabs">
-
-					<li><a href="__APP__/book/book_list">新加book-list</a></li>
-					<!-- href must be unique and match the id of target div -->
-					<li><a href="#" onclick="document.form1.submit();">更新排序</a></li>
+					<!-- <li><a href="#" onclick="document.form1.submit();">更新排序</a></li> -->
 					<li>
-						<a class="new-add" href="__APP__/book/book_add">添加小说</a>
+						<a class="new-add" href="__APP__/book/book_add" style="font-size:14px;">添加小说</a>
 					</li>
 				</ul>
 
@@ -96,19 +93,34 @@
 										<td width="15%">《<{$book.book_name}>》</td>
 										<td width="7%">
 											<{$book.book_cat}>
+											<!-- <if condition="$$book.book_cat eq 55">新书上传
+												<elseif  condition="$book.book_cat eq 56"/>情节展开
+												<elseif  condition="$book.book_cat eq 57"/>精彩纷呈
+												<elseif  condition="$book.book_cat eq 58"/>接近尾声
+												<elseif  condition="$book.book_cat eq 59"/>已经完本
+												<else/>
+											</if> -->
 										</td>
 										<td width="8%">
 											<{$book.user_id}>
 										</td>
-										<td width="6%">完本</td>
+										<td width="6%">
+											<if condition="$book.progress eq 55">新书上传
+												<elseif  condition="$book.progress eq 56"/>情节展开
+												<elseif  condition="$book.progress eq 57"/>精彩纷呈
+												<elseif  condition="$book.progress eq 58"/>接近尾声
+												<elseif  condition="$book.progress eq 59"/>已经完本
+												<else/>
+											</if>
+										</td>
 										<td width="7%">
 											<{$book.total}>
 										</td>
 										<td width="17%">
-											<{$book.public_time|date="Y-m-d H;i",###}>
+											<{$book.public_time|date="Y-m-d H:i",###}>
 										</td>
 
-										<td width="18%">2020-03-04 21:23:45</td>
+										<td width="18%"><{$book.update_time|date="Y-m-d H:i",###}></td>
 										<td width="12%">
 											<a href="__APP__/book/chapter_add?book_id=<{$book.book_id}>">添加章节</a>|
 											<a href="__APP__/book/book_edit?book_id=<{$book.book_id}>">审核</a>|
