小说管理章节管理、对应book表 字数 章节数、tag 修改

--- a/Admin/Tpl/default/book/cat_main.html
+++ b/Admin/Tpl/default/book/cat_main.html
@@ -110,7 +110,7 @@
 										<!-- <input type="checkbox" /> -->
 										<a href="cat_edit?cid=<{$cat.cat_id}>">
 											<{$cat.cat_name}>
-										</a>(小说：<{$cat.total}>本) <a href="cat_edit?cid=<{$cat.cat_id}>"><img
+										</a>(书籍：<{$cat.total}>本) <a href="cat_edit?cid=<{$cat.cat_id}>"><img
 													src="__PUBLIC__/admin/images/write2.gif"></a></td>
 									<td width="17%" align="center">
 										<if condition="$cat.status eq 1"> 显示
