--- a/index/Tpl/default/member/collect.html
+++ b/index/Tpl/default/member/collect.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-<title>订阅记录——<{$Think.SITE_NAME}></title>
+<title>订阅记录</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 
@@ -8,28 +8,14 @@
 <link rel="stylesheet" rev="stylesheet" href="__CSS__/main.css" type="text/css" media="all">
 <script language="javascript" type="text/javascript" src="__JS__/common.js"></script>
 <script language="javascript" type="text/javascript" src="__JS__/theme.js"></script>
-<!--[if IE 6]>
-<script type="text/javascript" src="/scripts/DD_belatedPNG.js" ></script>
-<script type="text/javascript">
-	DD_belatedPNG.fix(' .recommend_pic,.editor_pic,.title_pic,,#phead h1,#phead h1 ');
-</script>
-<![endif]-->
 
 </head>
 <body>
 
-<!---头部部分--->
 <include file="Public:header" />
-
-<!--------------------------------------------内容部分---------------------------------------------->
-
-
-
-
 
 <div class="main">
 
-<!---左侧导航--->
 <include file="Public:memberleft" />
   <div id="centerm"><div id="content">
 <table class="grid" align="center" width="100%">
@@ -56,10 +42,6 @@
 
 </div>
 
-
-
-
-<!--foot底部部分--->
 <include file="Public:footer" />
 
 </body></html>
