--- a/index/Tpl/default/member/order.html
+++ b/index/Tpl/default/member/order.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
-<title>订阅记录——<{$Think.SITE_NAME}></title>
+<title>订阅记录</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-
 <link rel="stylesheet" rev="stylesheet" href="__CSS__/style.css" type="text/css" media="all">
 <link rel="stylesheet" rev="stylesheet" href="__CSS__/main.css" type="text/css" media="all">
 <script language="javascript" type="text/javascript" src="__JS__/common.js"></script>
@@ -11,17 +9,11 @@
 </head>
 <body>
 
-<!---头部部分--->
 <include file="Public:header" />
-
 <div class="wrap clearfix mb20">
 
-<!---左侧导航--->
 <include file="Public:memberleft" />
-
 <div class="user-right">
-
-
 <table class="grid" align="center" width="100%">
 <caption>VIP章节订阅记录</caption>
   <tbody><tr align="center">
