--- a/index/Tpl/default/public/footer.html
+++ b/index/Tpl/default/public/footer.html
@@ -5,7 +5,7 @@
     	
         <{:showFootermenu()}>
     </div>
-    <p>请作者发布作品时遵守国家互联网信息管理办法规定</p>
-    <!-- <p><{$Think.SITE_COPYRIGHT}>&nbsp;&nbsp;<{$Think.SITE_BEIAN}></p> -->
+    <p>版权仅自己所有</p>
+   
     
 </div>
