--- a/Admin/Tpl/default/book/book_edit.html
+++ b/Admin/Tpl/default/book/book_edit.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html
 	PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>
-		增加文章</title>
-
+	<title>增加文章</title>
 	<link rel="stylesheet" href="__PUBLIC__/admin/css/reset.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="__PUBLIC__/admin/css/style.css" type="text/css" media="screen">
 	<script language="javascript" src="__PUBLIC__/admin/js/jquery.min.js" type="text/javascript"></script>
-
 	<script charset="UTF-8" src="__PUBLIC__/kindeditor/kindeditor-min.js"></script>
 	<script charset="UTF-8" src="__PUBLIC__/kindeditor/lang/zh_CN.js">
 	</script>
@@ -28,13 +24,10 @@
 			});
 		});
 	</script>
-
 </head>
-
 <body>
 	<div id="main-content">
 		<div class="content-box">
-		
 
 			<div class="content-box-header">
 				<h3 style="cursor: s-resize;">书籍修改</h3>
@@ -124,12 +117,7 @@
 
 						</fieldset>
 
-
-
-
-
 					</div>
-
 
 				</form>
 
