--- a/Admin/Tpl/default/book/cat_main.html
+++ b/Admin/Tpl/default/book/cat_main.html
@@ -1,52 +1,17 @@
 <!DOCTYPE html
 	PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title></title>
-
 	<link rel="stylesheet" href="__PUBLIC__/admin/css/reset.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="__PUBLIC__/admin/css/style.css" type="text/css" media="screen">
 	<script language="javascript" src="__PUBLIC__/admin/js/jquery.js" type="text/javascript"></script>
 	<script type="text/javascript" src="__PUBLIC__/admin/js/admin.js"></script>
-
 	<script language="javascript" src="__PUBLIC__/admin/js/global.js"></script>
 	<script language="javascript" src="__PUBLIC__/admin/js/context_menu.js"></script>
 	<script language="javascript" src="__PUBLIC__/admin/js/ieemu.js"></script>
 	<script language="javascript" src="__PUBLIC__/admin/js/dialog.js"></script>
-	<style type="text/css">
-		/* .close {
-			float: right;
-			cursor: default;
-		} */
-	</style>
-
-	<style>
-		/* .coolbg2 {
-			border: 1px solid #000000;
-			background-color: #F2F5E9;
-			height: 18px
-		}
-
-		.coolbt2 {
-			border-left: 2px solid #EFEFEF;
-			border-top: 2px solid #EFEFEF;
-			border-right: 2px solid #ACACAC;
-			border-bottom: 2px solid #ACACAC;
-			background-color: #F7FCDA
-		}
-
-		.nbline {
-			border-bottom: 1px solid #d6d6d6;
-			background-color: #FFFFFF;
-		}
-
-		.bline2 {
-			border-bottom: 1px solid #d6d6d6;
-			background-color: #F9FCEF;
-		} */
-	</style>
 </head>
 
 <body>
@@ -102,13 +67,13 @@
 									</td>
 									<td width="26%" align="right"><a href="http://localhost/dede/plus/list.php?tid=2"
 											target="_blank">预览</a>|
-											
+
 										<a href="__APP__/book/cat_edit?cid=<{$cat.cat_id}>">修改</a>|<a
 											href="__APP__/book/cat_del?cid=<{$cat.cat_id}>"
 											onclick="return confirm('确定要删除?')">删除</a></td>
 									<td width="32%" align="right">
-										<input name="ordernum" value="<{$cat.ordernum}>"
-											style="width:25px;height:20px" type="text" readonly></td>
+										<input name="ordernum" value="<{$cat.ordernum}>" style="width:25px;height:20px"
+											type="text" readonly></td>
 								</tr>
 							</volist>
 							<!--分类循环结束-->
@@ -120,40 +85,10 @@
 							</tr>
 						</tbody>
 					</table>
-					<!-- <table cellpadding="2" cellspacing="0" border="0" width="100%">
-  <tbody>
-
-   
-</tbody></table> -->
-
-
-
-					<!-- <div class="pagination">
-											<{$page}>
-										</div>  -->
-					<!-- End .pagination -->
-					
-
-
-
-
-
-
-
-
-				</div> 
-
-
-			</div> 
-
-		</div> 
-
-		<div class="clear"></div>
-
-		
-	</div> 
-
-
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
