--- a/Admin/Tpl/default/siteset/sys_group.html
+++ b/Admin/Tpl/default/siteset/sys_group.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>系统用户组管理</title>
+<title>系统用户管理</title>
 <link href="__PUBLIC__/admin/css/base.css" rel="stylesheet" type="text/css">
 </head>
 <body leftmargin="8" topmargin="8" background="__PUBLIC__/admin/images/allbg.gif">
