--- a/Admin/Tpl/default/index/index_menu.html
+++ b/Admin/Tpl/default/index/index_menu.html
@@ -45,7 +45,8 @@
 									target="main">章节管理</a></li>
 							<li><a class="nav-bottom-item" id="content_list" href="__APP__/book/cat_main/"
 									target="main">分类管理</a></li>
-
+									<li><a class="nav-bottom-item" id="member_guestbook" href="__APP__/member/comment_main"
+										target="main">评论管理</a></li>
 						</ul>
 					</li>
 
@@ -60,8 +61,8 @@
 
 							<li><a class="nav-bottom-item" id="member_pm" href="__APP__/member/letter_main"
 									target="main">会员信箱管理</a></li>
-							<li><a class="nav-bottom-item" id="member_guestbook" href="__APP__/member/comment_main"
-									target="main">会员留言管理</a></li>
+							<!-- <li><a class="nav-bottom-item" id="member_guestbook" href="__APP__/member/comment_main"
+									target="main">会员留言管理</a></li> -->
 
 						</ul>
 					</li>
@@ -99,7 +100,7 @@
 
 
 
-					<li>
+					<li style="display:none;">
 						<a id="channel" href="javascript:void(0);" class="nav-top-item" style="padding-right: 15px;">
 							权限管理 </a>
 						<ul style="display: none;">
