--- a/Admin/Tpl/default/member/comment_main.html
+++ b/Admin/Tpl/default/member/comment_main.html
@@ -4,20 +4,16 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>用户短信管理</title>
-
+  <title></title>
   <link rel="stylesheet" href="__PUBLIC__/admin/css/reset.css" type="text/css" media="screen">
   <link rel="stylesheet" href="__PUBLIC__/admin/css/style.css" type="text/css" media="screen">
   <link rel="stylesheet" type="text/css" href="__PUBLIC__/admin/css/base.css">
-
 </head>
-
 <body>
-
   <div id="main-content">
     <div class="content-box">
       <div class="content-box-header">
-        <h3 style="cursor: s-resize;">用户留言管理</h3>
+        <h3 style="cursor: s-resize;">用户评论管理</h3>
       </div>
       <div class="content-box-content">
 
@@ -26,31 +22,30 @@
           <table cellpadding="1" cellspacing="1" align="center" border="1" width="98%">
             <tbody>
               <tr height="26">
-                <td align="center" width="5%"><strong>小说名称</strong></td>
-                <td align="center" width="20%"><strong>留言内容</strong></td>
-
-                <td align="center" width="10%"><strong>留言时间</strong></td>
-
-
-                <td align="center" width="18%"><strong>操作</strong></td>
+                <td align="center" width="5%"><strong>书籍ID</strong></td>
+                <td align="center" width="10%"><strong>评论标题</strong></td>
+                <td align="center" width="20%"><strong>评论内容</strong></td>
+                <td align="center" width="10%"><strong>评论时间</strong></td>
+                <td align="center" width="10%"><strong>操作</strong></td>
               </tr>
               <volist name='data' id='vo'>
                 <tr height="26">
                   <td align="center" bgcolor="#FFFFFF">
                     <{$vo.book_id}>
                   </td>
-                  <td width="20%" align="center" bgcolor="#FFFFFF">
+                  <td width="" align="center" bgcolor="#FFFFFF">
                     <{$vo.title}>
                   </td>
-
-                  <td width="10%" align="center" bgcolor="#FFFFFF">
+                  <td width="" align="center" bgcolor="#FFFFFF">
+                    <{$vo.content}>
+                  </td>
+                  <td width="" align="center" bgcolor="#FFFFFF">
                     <{$vo.time|date="Y-m-d h:i:s",###}>
                   </td>
 
-
-                  <td width="18%" align="center" bgcolor="#FFFFFF"><a
-                      href="__ROOT__/index.php/letter/show/letter_id/<{$letter.letter_id}>" target="_blank">浏览</a>|<a
-                      href="__APP__/member/comment_del/id/<{$vo.comment_id}>" onclick="return confirm('确定要删除?')">删除</a>
+                  <td width="" align="center" bgcolor="#FFFFFF">
+                    <!-- <a href="__ROOT__/index.php/letter/show/letter_id/<{$letter.letter_id}>" target="_blank">浏览</a>| -->
+                      <a href="__APP__/member/comment_del/id/<{$vo.comment_id}>" onclick="return confirm('确定要删除?')">删除</a>
                   </td>
                 </tr>
               </volist>
